modified files and added new components

--- a/gcc-product/src/app/navbar/navbar.component.html
+++ b/gcc-product/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         
           <mat-icon>cart</mat-icon>
         <a mat-button routerLink="/cart">Cart</a>
-        <a mat-button routerLink="/login">Login</a>
+        <a mat-button routerLink="/">Login</a>
 
         <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
           <mat-icon>account_circle</mat-icon>
