--- a/gcc-product/src/app/sidebar/sidebar.component.html
+++ b/gcc-product/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
+  <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu" class="">
     <mat-icon>menu</mat-icon>
   </button>
 
@@ -22,7 +22,7 @@
 
     <mat-nav-list>
 
-      <mat-list-item routerLink="#">
+      <mat-list-item routerLink="/chart">
         <mat-icon>dashboard</mat-icon><span>Dashboard</span>
       </mat-list-item>
 
