--- a/gcc-product/src/app/app.component.html
+++ b/gcc-product/src/app/app.component.html
@@ -2,11 +2,11 @@
   <div>
     <app-navbar></app-navbar>
   </div>
-  <div class="parent-container">
-    <div>
+  <div class="row">
+    <div class="col-md-2 ">
       <app-sidebar></app-sidebar>
       </div>
-      <div>
+      <div class="col-md-10 ">
         <router-outlet></router-outlet>
       </div>
   </div>
